fixed spacing

--- a/src/styles/Community.css
+++ b/src/styles/Community.css
@@ -19,7 +19,7 @@
   border-radius: 5px;
   padding: 35px;
   margin: 10px 0px;
-  width: 652px;
+  width: 560px;
   display: flex;
   justify-content: space-between;
 }
